fix overflow

--- a/phone_style.css
+++ b/phone_style.css
@@ -10,7 +10,7 @@ and (max-device-width : 767px) {
         width: 100%; 
         top: 0; 
     }
-    body {
+    html, body {
         margin: 0; 
         overflow-x: hidden; 
     }
@@ -44,6 +44,7 @@ and (max-device-width : 767px) {
         position: fixed; 
         top: 0; 
         right: 20px;
+        font-family: 'Nunito', sans-serif;
         display: inline-block;
     }
     .dropdown-content {
@@ -56,6 +57,7 @@ and (max-device-width : 767px) {
     }
     .dropdown-content a {
         color: black;
+        font-family: 'Nunito', sans-serif;
         padding: 12px 16px;
         text-decoration: none;
         background-color: solid skyblue; 
